--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
+
+
 {
-  "name": "task6",
+  "name": "buffaloes",
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "homepage": "https://pavani459.github.io/Task-Deploy",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.22",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "vite": "^5.4.1"
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "gh-pages": "^6.1.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   }
 }
