--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "homepage": "https://pavani459.github.io/Task-Deploy",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,7 +17,6 @@
   "devDependencies": {
     "vite": "^5.4.0",
     "@vitejs/plugin-react": "^4.3.0",
-    "gh-pages": "^6.1.0",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
